Web projects/IoT Home Automation System/k8s/namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iot-home-automation
